--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -35,12 +35,9 @@ jobs:
       pull-requests: write
       
     steps:
+    - env:
+          OUTPUT1: ${{ needs.stale.outputs.staled-issues-prs }}
     - uses: skitionek/notify-microsoft-teams@master
       with:
         webhook_url: ${{ secrets.MSTEAMS_WEBHOOK }}
-        raw: >-
-            {
-              "@type": "Stale PR",
-              "@context": "http://schema.org/extensions",
-              "title": "You have stale PR my friend ${{ needs.stale.outputs.staled-issues-prs }}"
-            }
+        overwrite: "{title: `Overwrote title in $OUTPUT1`}"
