--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -33,10 +33,9 @@ jobs:
     permissions:
       issues: write
       pull-requests: write
-      
+    env:
+      OUTPUT1: ${{ needs.stale.outputs.staled-issues-prs }}
     steps:
-      - env:
-          OUTPUT1: ${{ needs.stale.outputs.staled-issues-prs }}
       - uses: skitionek/notify-microsoft-teams@master
         with:
           webhook_url: ${{ secrets.MSTEAMS_WEBHOOK }}
