--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -26,7 +26,8 @@ jobs:
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         stale-pr-message: 'This PR is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 10 days.'
-        days-before-pr-stale: 0.1
+        days-before-pr-stale: 1
+        start-date: '2020-04-18T00:00:00Z' # ISO 8601 or RFC 2822
   job2:
     runs-on: ubuntu-latest
     needs: stale
