--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -27,6 +27,7 @@ jobs:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         stale-pr-message: 'This PR is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 1 days.'
         days-before-pr-stale: 0.11
+        ignore-updates: true
 #         start-date: '2020-04-18T00:00:00Z' # ISO 8601 or RFC 2822
   job2:
     runs-on: ubuntu-latest
