--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -17,18 +17,18 @@ jobs:
     permissions:
       issues: write
       pull-requests: write
-#     outputs:
-#       output1: ${{ steps.step1.outputs.staled-issues-prs }}
+    outputs:
+      output1: ${{ steps.step1.outputs.staled-issues-prs }}
 
     steps:
     - uses: actions/stale@v7
-#       id: step1
+      id: step1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         stale-pr-message: 'This PR is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 1 days.'
         days-before-pr-stale: 0.11
         ignore-updates: true
-#         start-date: '2020-04-18T00:00:00Z' # ISO 8601 or RFC 2822
+    - run: echo "waka waka $output1"
   job2:
     runs-on: ubuntu-latest
     needs: stale
