--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -31,12 +31,13 @@ jobs:
     - name: Print outputs
       env:
         STALE_PRS: ${{ steps.step-stale.outputs.staled-issues-prs }}
-      run: echo "waka waka $STALE_PRS"
+      run: echo "Stale PRs count ${#STALE_PRS[@]}"
   notify-team-job:
     runs-on: ubuntu-latest
     needs: stale-job
     steps:
-      - env:
+      - name: Print outputs
+        env:
           OUTPUT1: ${{needs.stale-job.outputs.output1}}
         run: echo "say oh yeah $OUTPUT1"
 #   job-notify-teams:
