--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -18,22 +18,23 @@ jobs:
       issues: write
       pull-requests: write
     outputs:
-      staled-prs-output: ${{ steps.step-stale.outputs.staled-prs }}
+      staled-prs-output: ${{ steps.step-stale.outputs.staled_prs }}
 
     steps:
     - uses: actions/stale@v7
-      id: step-stale
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         stale-pr-message: 'This PR is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 1 days.'
         days-before-pr-stale: 0.11
         ignore-updates: true
     - name: Print outputs
+      id: step-stale
       env:
         STALE_PRS: ${{ steps.step-stale.outputs.staled-issues-prs }}
       run: |
         echo "Stale PRs count ${#STALE_PRS[@]}"
-        echo "staled-prs=${#STALE_PRS[@]}" >> $GITHUB_OUTPUT
+        echo "staled_prs=${#STALE_PRS[@]}" >> $GITHUB_OUTPUT
+        
   notify-team-job:
     runs-on: ubuntu-latest
     needs: stale-job
