--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -12,7 +12,6 @@ on:
 
 jobs:
   stale-job:
-
     runs-on: ubuntu-latest
     permissions:
       issues: write
@@ -33,27 +32,24 @@ jobs:
         STALE_PRS: ${{ steps.step-stale.outputs.staled-issues-prs }}
       run: |
         echo "Stale PRs count ${#STALE_PRS[@]}"
-        echo "staled_prs=${#STALE_PRS[@]}" >> $GITHUB_OUTPUT
+        echo "staled_prs=${#STALE_PRS[@]}" >> $GITHUB_OUTPUT # Command to set output, to be use in `notify-team-job` -> https://urlis.net/tpvquv5p
         
+#   notify-team-job:
+#     runs-on: ubuntu-latest
+#     needs: stale-job
+#     steps:
+#       - name: Print outputs
+#         env:
+#           STALE_PRS_OUTPUT: ${{needs.stale-job.outputs.staled-prs-output}}
+#         run: echo "say oh yeah $STALE_PRS_OUTPUT"
   notify-team-job:
     runs-on: ubuntu-latest
+    env:
+      STALE_PRS_OUTPUT: ${{needs.stale-job.outputs.staled-prs-output}}
     needs: stale-job
     steps:
-      - name: Print outputs
-        env:
-          STALE_PRS_OUTPUT: ${{needs.stale-job.outputs.staled-prs-output}}
-        run: echo "say oh yeah $STALE_PRS_OUTPUT"
-#   job-notify-teams:
-#     runs-on: ubuntu-latest
-#     needs: stale
-#     permissions:
-#       issues: write
-#       pull-requests: write
-#     env:
-#       OUTPUT1: ${{ needs.stale.outputs.staled-issues-prs }}
-#     steps:
-#       - uses: skitionek/notify-microsoft-teams@master
-#         with:
-#           webhook_url: ${{ secrets.MSTEAMS_WEBHOOK }}
-#           overwrite: "{title: `Overwrote title in $OUTPUT1`}"
-#       - run: "echo $OUTPUT1"
+      - uses: skitionek/notify-microsoft-teams@master
+        with:
+          webhook_url: ${{ secrets.MSTEAMS_WEBHOOK }}
+          overwrite: "{title: `We have $STALE_PRS_OUTPUT staled PRs. Please give it some attention`}"
+      - run: echo "We have $STALE_PRS_OUTPUT staled PRs"
