--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -47,9 +47,13 @@ jobs:
     needs: stale-job
     steps:
       - uses: skitionek/notify-microsoft-teams@master
+      - name: Microsoft Teams Notification
         env:
           STALE_PRS_OUTPUT: ${{needs.stale-job.outputs.staled-prs-output}}
         with:
           webhook_url: ${{ secrets.MSTEAMS_WEBHOOK }}
-          overwrite: "{title: `We have $STALE_PRS_OUTPUT staled PRs. Please give it some attention`}"
-      - run: echo "We have $STALE_PRS_OUTPUT staled PRs"
+          overwrite: "{title: `We have ${STALE_PRS_OUTPUT} staled PRs. Please give it some attention`}"
+      - name: Print output
+        env:
+          STALE_PRS_OUTPUT: ${{needs.stale-job.outputs.staled-prs-output}}
+        run: echo "We have $STALE_PRS_OUTPUT staled PRs"
