--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -46,8 +46,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: stale-job
     steps:
-      - uses: skitionek/notify-microsoft-teams@master
       - name: Microsoft Teams Notification
+        uses: skitionek/notify-microsoft-teams@master
         env:
           STALE_PRS_OUTPUT: ${{needs.stale-job.outputs.staled-prs-output}}
         with:
