--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           STALE_PRS_OUTPUT: ${{ needs.stale-job.outputs.staled-prs-output }}
           webhook_url: ${{ secrets.MSTEAMS_WEBHOOK }}
-          overwrite: "{title: `We have ${{ STALE_PRS_OUTPUT }} staled PRs. Please give it some attention`}"
+          overwrite: "{title: `We have $STALE_PRS_OUTPUT staled PRs. Please give it some attention`}"
       - name: Print output
         env:
           STALE_PRS_OUTPUT: ${{ needs.stale-job.outputs.staled-prs-output }}
